# eyes

./: .gitignore  README.md  build.py  pyproject.toml  test_notification.scpt
.github/workflows/: ci.yml  release.yml
Eyes.app/Contents/: Info.plist
Eyes.app/Contents/MacOS/: Eyes
Eyes.app/Contents/Resources/: eyes.pex
assets/: create_icon.py
eyes/: __init__.py  cli.py  menubar.py  reminder.py  reminders.py
eyes-installer/: README.txt  com.eyes.plist  eyes-control  eyes.pex  install.sh  uninstall.sh
eyes/core/: reminder.py
scripts/: com.eyes.plist
tests/: test_cli.py  test_reminder.py
