[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eyes"
version = "1.0.0"
description = "A configurable eye break reminder following the 20-20-20 rule"
authors = [
    {name = "Ryan James Spencer", email = "spencer.ryanjames@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["eye-strain", "break-reminder", "20-20-20", "productivity", "health"]

dependencies = [
    "plyer>=2.0",
    "pyobjus>=1.2.3",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
windows = [
    "winotify>=1.0.0",
    "win10toast>=0.9",
]
macos = [
    "pync>=2.0.0",
    "pyobjus>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/justanotherdot/eyes"
Repository = "https://github.com/justanotherdot/eyes"
Issues = "https://github.com/justanotherdot/eyes/issues"

[project.scripts]
eyes = "eyes.cli:entry_point"

[tool.hatch.build.targets.wheel]
packages = ["eyes"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pex>=2.47.0",
]

[tool.ruff.lint]
extend-ignore = [
    "F401",  # Allow unused imports in try/except blocks for optional dependencies
]
